[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/room.gd" type="Script" id=1]
[ext_resource path="res://levels/tilesets/tileset_4x4_one_way.tres" type="TileSet" id=2]
[ext_resource path="res://levels/tilesets/tileset_4x4_decorative.tres" type="TileSet" id=3]
[ext_resource path="res://levels/tilesets/tileset_4x4.tres" type="TileSet" id=5]

[node name="generic_room" type="Node2D"]
script = ExtResource( 1 )

[node name="one_way_tile_map" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 4, 4 )
collision_mask = 0
format = 1

[node name="one_way_tile_map_2" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 4, 4 )
collision_mask = 0
format = 1

[node name="tile_map" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 4, 4 )
collision_mask = 0
format = 1

[node name="room_start_area_2d" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="death_plane" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="spawn_point_there" type="Position2D" parent="."]

[node name="spawn_point_back" type="Position2D" parent="."]

[node name="camera_limits" type="Node2D" parent="."]
position = Vector2( 112, 72 )

[node name="limit_left" type="Position2D" parent="camera_limits"]
position = Vector2( -120, 0 )

[node name="limit_right" type="Position2D" parent="camera_limits"]
position = Vector2( 152, 0 )

[node name="limit_bottom" type="Position2D" parent="camera_limits"]
position = Vector2( 0, 80 )

[node name="limit_top" type="Position2D" parent="camera_limits"]
position = Vector2( 0, -80 )

[node name="parallax_background" type="ParallaxBackground" parent="."]
layer = -5

[node name="parallax_layer_80" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.8, 0.8 )

[node name="decorative_tile_map" type="TileMap" parent="parallax_background/parallax_layer_80"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 4, 4 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="parallax_layer_90" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.9, 0.9 )

[node name="decorative_tile_map" type="TileMap" parent="parallax_background/parallax_layer_90"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 4, 4 )
collision_layer = 0
collision_mask = 0
format = 1
[connection signal="tree_exiting" from="." to="." method="_on_generic_room_tree_exiting"]
[connection signal="body_entered" from="room_start_area_2d" to="." method="_on_room_start_area_2d_body_entered"]
[connection signal="body_entered" from="death_plane" to="." method="_on_death_plane_body_entered"]
